add: limit product feat
